src/styles.scss
/* You can add global styles to this file, and also import other style files */

@import 'assets/scss/typography';
@import 'assets/scss/color';
@import 'assets/scss/breakpoint';
@import 'assets/scss/icons';
@import 'assets/scss/inputs';
@import 'assets/scss/hyperlink';
@import '../node_modules/leaflet.locatecontrol/dist/L.Control.Locate.css';

html {
  height: -webkit-fill-available;
  margin: 0;
  padding: 0;
  background-color: $grey-6;
}
body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background-color: $grey-6;
  min-height: 100vh;
  min-height: -webkit-fill-available;
}

a {
  color: $default-link-color;
  text-decoration: none;
  background-color: transparent;
  @include cn-regular-14;
  cursor: pointer;
  &:focus {
    text-decoration: none;
  }
  &:hover {
    text-decoration: underline;
  }
  &.primary {
    @include hyperlink;
    width: 100%;
  }
  &.right {
    text-align: right;
  }
}

.clickable {
  cursor: pointer;
}

.bold {
  font-weight: bold !important;
}

// Containers
.content-container {
  margin: 0;
  padding-top: 30px;
  width: 100%;
  height: 100%;
  &.medium-pt {
    padding: 25px 0 30px 0;
  }
  &.small-pt {
    padding: 10px 0 30px 0;
  }
  &.no-pt {
    padding: 0 0 30px 0;
  }
  @media #{$phone} {
    padding-top: 30px;
  }
}
.section-container {
  width: 80%;
  max-width: 1200px;
  margin: 0 auto;
  padding: 10px 0;
  @media #{$tablet} {
    width: 95%;
    max-width: unset;
  }
  &.no-max-width {
    max-width: unset;
    margin-bottom: 1rem;
    width: unset;
  }
}

/** Checkboxes **/

.checkbox {
  list-style-type: none;
  width: 100%;
  input {
    opacity: 0;
    display: none;
    &:checked ~ .customCheck {
      background-color: $primary-color;
      border-color: transparent;
    }
    &:checked ~ .customCheck:after {
      display: block;
    }
  }
  label {
    grid-template-columns: min-content auto;
    display: inline-grid;
    cursor: pointer;
  }
  .label {
    padding-left: 16px;
    padding-right: 10px;
    @include btn-pass;
  }
  .customCheck {
    display: inline-grid;
    width: 18px;
    height: 18px;
    background-color: $white;
    border: 1px solid $grey;
    cursor: pointer;
    position: relative;

    top: 0;
    left: 0;
    &:hover {
      background-color: $grey-6;
    }
    &:after {
      content: '';
      position: absolute;
      display: none;
      left: 7px;
      top: 3px;
      width: 4px;
      height: 8px;
      border: solid $white;
      border-width: 0 2px 2px 0;
      transform: rotate(45deg);
      -webkit-transform: rotate(45deg);
      -ms-transform: rotate(45deg);
    }
  }
}
// Layout
.w-100 {
  width: 100%;
}

.mobile-column {
  @media #{$large-phone} {
    flex-direction: column;
  }
}

// PRINT

@media print {
  body,
  html,
  .forPrint {
    height: auto;
  }

  .content-container {
    display: none !important;
  }
}

